erDiagram
    USUARIO {
        INT id PK
        STRING nome
        STRING telefone
        STRING email
        STRING identificador "Matrícula ou Contrato"
        STRING senha
        STRING tipo "Aluno | Professor | Administrador"
    }

    BLOCO {
        INT id PK
        STRING nome
        INT quantidade_salas
    }

    SALA {
        INT id PK
        STRING codigo
        STRING nome
        INT andar
        INT bloco_id FK
    }

    AGENDA {
        INT id PK
        DATE data
        TIME horario_inicio
        TIME horario_fim
        STRING status "Disponível | Ocupado"
        INT sala_id FK
        INT usuario_id FK
    }

    NOTIFICACAO {
        INT id PK
        STRING mensagem
        INT usuario_id FK
        INT agenda_id FK
    }

    BLOCO ||--o{ SALA : "contém"
    SALA  ||--o{ AGENDA : "possui"
    USUARIO ||--o{ AGENDA : "realiza"
    AGENDA ||--o{ NOTIFICACAO : "gera"
    USUARIO ||--o{ NOTIFICACAO : "recebe"
